--- a/User/voluntário.html
+++ b/User/voluntário.html
@@ -157,12 +157,37 @@
             <input type="text" placeholder="Cep">
             <input type="text" placeholder="Endereço">
             <input type="text" placeholder="Nº">
-            <input type="text" placeholder="Bairro">
+            <input type="text" placeholder="Cidade">
             <input type="text" placeholder="Bairro">
             <select>
                 <option value="">Estado</option>
-                <option value="SP">SP</option>
+                <option value="AC">AC</option>
+                <option value="AL">AL</option>
+                <option value="AP">AP</option>
+                <option value="AM">AM</option>
+                <option value="BA">BA</option>
+                <option value="CE">CE</option>
+                <option value="DF">DF</option>
+                <option value="ES">ES</option>
+                <option value="GO">GO</option>
+                <option value="MA">MA</option>
+                <option value="MT">MT</option>
+                <option value="MS">MS</option>
+                <option value="MG">MG</option>
+                <option value="PA">PA</option>
+                <option value="PB">PB</option>
+                <option value="PR">PR</option>
+                <option value="PE">PE</option>
+                <option value="PI">PI</option>
                 <option value="RJ">RJ</option>
+                <option value="RN">RS</option>
+                <option value="RO">RO</option>
+                <option value="RS">RS</option>
+                <option value="RR">RR</option>
+                <option value="SC">SC</option>
+                <option value="SP">SP</option>
+                <option value="SE">SE</option>
+                <option value="TO">TO</option>
             </select>
 
             <div class="upload-wrapper">
